--- a/GoodWeather/Base.lproj/Main.storyboard
+++ b/GoodWeather/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                                     <constraint firstAttribute="width" constant="200" id="dqm-Tt-rmD"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="search"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mgW-vr-4ac">
                                 <rect key="frame" x="176" y="651" width="62" height="32"/>
